rotom_cmp/parsing/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    BANG
    CLASS
    EOF
    FALSE
    FOR
    OR
    RETURN
    SUPER
    THIS
    TRUE

Grammar

Rule 0     S' -> prog
Rule 1     prog -> fn_def_list
Rule 2     fn_def_list -> fn_def fn_def_list
Rule 3     fn_def_list -> fn_def
Rule 4     fn_def -> FN IDENTIFIER LEFT_PAREN param_list RIGHT_PAREN LEFT_BRACE stmt_list RIGHT_BRACE
Rule 5     fn_def -> FN IDENTIFIER LEFT_PAREN param_list RIGHT_PAREN ARROW expr
Rule 6     param_list -> IDENTIFIER COMMA param_list
Rule 7     param_list -> IDENTIFIER
Rule 8     param_list -> empty
Rule 9     stmt_list -> stmt stmt_list
Rule 10    stmt_list -> stmt
Rule 11    stmt -> expr
Rule 12    stmt -> declaration
Rule 13    stmt -> assign
Rule 14    stmt -> print
Rule 15    stmt -> condition
Rule 16    stmt -> while
Rule 17    while -> WHILE expr LEFT_BRACE stmt_list RIGHT_BRACE
Rule 18    condition -> IF expr LEFT_BRACE stmt_list RIGHT_BRACE
Rule 19    condition -> IF expr LEFT_BRACE stmt_list RIGHT_BRACE ELSE LEFT_BRACE stmt_list RIGHT_BRACE
Rule 20    print -> PRINT expr SEMICOLON
Rule 21    print -> PRINTLN expr SEMICOLON
Rule 22    expr -> expr PLUS expr
Rule 23    expr -> expr MINUS expr
Rule 24    expr -> expr STAR expr
Rule 25    expr -> expr SLASH expr
Rule 26    expr -> expr LESS expr
Rule 27    expr -> expr LESS_EQUAL expr
Rule 28    expr -> expr GREATER expr
Rule 29    expr -> expr GREATER_EQUAL expr
Rule 30    expr -> expr EQUAL_EQUAL expr
Rule 31    expr -> expr BANG_EQUAL expr
Rule 32    expr -> LEFT_PAREN expr RIGHT_PAREN
Rule 33    expr -> NUMBER
Rule 34    expr -> NIL
Rule 35    expr -> STRING
Rule 36    expr -> LEFT_BRACKET expr_list_comma RIGHT_BRACKET
Rule 37    expr -> expr DOT IDENTIFIER
Rule 38    expr -> expr DOT IDENTIFIER LEFT_PAREN expr_list_comma RIGHT_PAREN
Rule 39    expr -> IDENTIFIER LEFT_PAREN expr_list_comma RIGHT_PAREN
Rule 40    expr_list_comma -> expr COMMA expr_list_comma
Rule 41    expr_list_comma -> expr
Rule 42    expr_list_comma -> empty
Rule 43    expr -> IDENTIFIER
Rule 44    expr -> expr IF expr ELSE expr
Rule 45    expr -> LEFT_BRACE stmt_list RIGHT_BRACE
Rule 46    declaration -> LET IDENTIFIER EQUAL expr SEMICOLON
Rule 47    declaration -> LET MUT IDENTIFIER EQUAL expr SEMICOLON
Rule 48    assign -> IDENTIFIER EQUAL expr SEMICOLON
Rule 49    empty -> <empty>

Terminals, with rules where they appear

AND                  : 
ARROW                : 5
BANG                 : 
BANG_EQUAL           : 31
CLASS                : 
COMMA                : 6 40
DOT                  : 37 38
ELSE                 : 19 44
EOF                  : 
EQUAL                : 46 47 48
EQUAL_EQUAL          : 30
FALSE                : 
FN                   : 4 5
FOR                  : 
GREATER              : 28
GREATER_EQUAL        : 29
IDENTIFIER           : 4 5 6 7 37 38 39 43 46 47 48
IF                   : 18 19 44
LEFT_BRACE           : 4 17 18 19 19 45
LEFT_BRACKET         : 36
LEFT_PAREN           : 4 5 32 38 39
LESS                 : 26
LESS_EQUAL           : 27
LET                  : 46 47
MINUS                : 23
MUT                  : 47
NIL                  : 34
NUMBER               : 33
OR                   : 
PLUS                 : 22
PRINT                : 20
PRINTLN              : 21
RETURN               : 
RIGHT_BRACE          : 4 17 18 19 19 45
RIGHT_BRACKET        : 36
RIGHT_PAREN          : 4 5 32 38 39
SEMICOLON            : 20 21 46 47 48
SLASH                : 25
STAR                 : 24
STRING               : 35
SUPER                : 
THIS                 : 
TRUE                 : 
WHILE                : 17
error                : 

Nonterminals, with rules where they appear

assign               : 13
condition            : 15
declaration          : 12
empty                : 8 42
expr                 : 5 11 17 18 19 20 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 37 38 40 41 44 44 44 46 47 48
expr_list_comma      : 36 38 39 40
fn_def               : 2 3
fn_def_list          : 1 2
param_list           : 4 5 6
print                : 14
prog                 : 0
stmt                 : 9 10
stmt_list            : 4 9 17 18 19 19 45
while                : 16

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . fn_def_list
    (2) fn_def_list -> . fn_def fn_def_list
    (3) fn_def_list -> . fn_def
    (4) fn_def -> . FN IDENTIFIER LEFT_PAREN param_list RIGHT_PAREN LEFT_BRACE stmt_list RIGHT_BRACE
    (5) fn_def -> . FN IDENTIFIER LEFT_PAREN param_list RIGHT_PAREN ARROW expr

    FN              shift and go to state 4

    prog                           shift and go to state 1
    fn_def_list                    shift and go to state 2
    fn_def                         shift and go to state 3

state 1

    (0) S' -> prog .



state 2

    (1) prog -> fn_def_list .

    $end            reduce using rule 1 (prog -> fn_def_list .)


state 3

    (2) fn_def_list -> fn_def . fn_def_list
    (3) fn_def_list -> fn_def .
    (2) fn_def_list -> . fn_def fn_def_list
    (3) fn_def_list -> . fn_def
    (4) fn_def -> . FN IDENTIFIER LEFT_PAREN param_list RIGHT_PAREN LEFT_BRACE stmt_list RIGHT_BRACE
    (5) fn_def -> . FN IDENTIFIER LEFT_PAREN param_list RIGHT_PAREN ARROW expr

    $end            reduce using rule 3 (fn_def_list -> fn_def .)
    FN              shift and go to state 4

    fn_def                         shift and go to state 3
    fn_def_list                    shift and go to state 5

state 4

    (4) fn_def -> FN . IDENTIFIER LEFT_PAREN param_list RIGHT_PAREN LEFT_BRACE stmt_list RIGHT_BRACE
    (5) fn_def -> FN . IDENTIFIER LEFT_PAREN param_list RIGHT_PAREN ARROW expr

    IDENTIFIER      shift and go to state 6


state 5

    (2) fn_def_list -> fn_def fn_def_list .

    $end            reduce using rule 2 (fn_def_list -> fn_def fn_def_list .)


state 6

    (4) fn_def -> FN IDENTIFIER . LEFT_PAREN param_list RIGHT_PAREN LEFT_BRACE stmt_list RIGHT_BRACE
    (5) fn_def -> FN IDENTIFIER . LEFT_PAREN param_list RIGHT_PAREN ARROW expr

    LEFT_PAREN      shift and go to state 7


state 7

    (4) fn_def -> FN IDENTIFIER LEFT_PAREN . param_list RIGHT_PAREN LEFT_BRACE stmt_list RIGHT_BRACE
    (5) fn_def -> FN IDENTIFIER LEFT_PAREN . param_list RIGHT_PAREN ARROW expr
    (6) param_list -> . IDENTIFIER COMMA param_list
    (7) param_list -> . IDENTIFIER
    (8) param_list -> . empty
    (49) empty -> .

    IDENTIFIER      shift and go to state 8
    RIGHT_PAREN     reduce using rule 49 (empty -> .)

    param_list                     shift and go to state 9
    empty                          shift and go to state 10

state 8

    (6) param_list -> IDENTIFIER . COMMA param_list
    (7) param_list -> IDENTIFIER .

    COMMA           shift and go to state 11
    RIGHT_PAREN     reduce using rule 7 (param_list -> IDENTIFIER .)


state 9

    (4) fn_def -> FN IDENTIFIER LEFT_PAREN param_list . RIGHT_PAREN LEFT_BRACE stmt_list RIGHT_BRACE
    (5) fn_def -> FN IDENTIFIER LEFT_PAREN param_list . RIGHT_PAREN ARROW expr

    RIGHT_PAREN     shift and go to state 12


state 10

    (8) param_list -> empty .

    RIGHT_PAREN     reduce using rule 8 (param_list -> empty .)


state 11

    (6) param_list -> IDENTIFIER COMMA . param_list
    (6) param_list -> . IDENTIFIER COMMA param_list
    (7) param_list -> . IDENTIFIER
    (8) param_list -> . empty
    (49) empty -> .

    IDENTIFIER      shift and go to state 8
    RIGHT_PAREN     reduce using rule 49 (empty -> .)

    param_list                     shift and go to state 13
    empty                          shift and go to state 10

state 12

    (4) fn_def -> FN IDENTIFIER LEFT_PAREN param_list RIGHT_PAREN . LEFT_BRACE stmt_list RIGHT_BRACE
    (5) fn_def -> FN IDENTIFIER LEFT_PAREN param_list RIGHT_PAREN . ARROW expr

    LEFT_BRACE      shift and go to state 14
    ARROW           shift and go to state 15


state 13

    (6) param_list -> IDENTIFIER COMMA param_list .

    RIGHT_PAREN     reduce using rule 6 (param_list -> IDENTIFIER COMMA param_list .)


state 14

    (4) fn_def -> FN IDENTIFIER LEFT_PAREN param_list RIGHT_PAREN LEFT_BRACE . stmt_list RIGHT_BRACE
    (9) stmt_list -> . stmt stmt_list
    (10) stmt_list -> . stmt
    (11) stmt -> . expr
    (12) stmt -> . declaration
    (13) stmt -> . assign
    (14) stmt -> . print
    (15) stmt -> . condition
    (16) stmt -> . while
    (22) expr -> . expr PLUS expr
    (23) expr -> . expr MINUS expr
    (24) expr -> . expr STAR expr
    (25) expr -> . expr SLASH expr
    (26) expr -> . expr LESS expr
    (27) expr -> . expr LESS_EQUAL expr
    (28) expr -> . expr GREATER expr
    (29) expr -> . expr GREATER_EQUAL expr
    (30) expr -> . expr EQUAL_EQUAL expr
    (31) expr -> . expr BANG_EQUAL expr
    (32) expr -> . LEFT_PAREN expr RIGHT_PAREN
    (33) expr -> . NUMBER
    (34) expr -> . NIL
    (35) expr -> . STRING
    (36) expr -> . LEFT_BRACKET expr_list_comma RIGHT_BRACKET
    (37) expr -> . expr DOT IDENTIFIER
    (38) expr -> . expr DOT IDENTIFIER LEFT_PAREN expr_list_comma RIGHT_PAREN
    (39) expr -> . IDENTIFIER LEFT_PAREN expr_list_comma RIGHT_PAREN
    (43) expr -> . IDENTIFIER
    (44) expr -> . expr IF expr ELSE expr
    (45) expr -> . LEFT_BRACE stmt_list RIGHT_BRACE
    (46) declaration -> . LET IDENTIFIER EQUAL expr SEMICOLON
    (47) declaration -> . LET MUT IDENTIFIER EQUAL expr SEMICOLON
    (48) assign -> . IDENTIFIER EQUAL expr SEMICOLON
    (20) print -> . PRINT expr SEMICOLON
    (21) print -> . PRINTLN expr SEMICOLON
    (18) condition -> . IF expr LEFT_BRACE stmt_list RIGHT_BRACE
    (19) condition -> . IF expr LEFT_BRACE stmt_list RIGHT_BRACE ELSE LEFT_BRACE stmt_list RIGHT_BRACE
    (17) while -> . WHILE expr LEFT_BRACE stmt_list RIGHT_BRACE

    LEFT_PAREN      shift and go to state 17
    NUMBER          shift and go to state 27
    NIL             shift and go to state 28
    STRING          shift and go to state 29
    LEFT_BRACKET    shift and go to state 30
    IDENTIFIER      shift and go to state 16
    LEFT_BRACE      shift and go to state 18
    LET             shift and go to state 32
    PRINT           shift and go to state 33
    PRINTLN         shift and go to state 34
    IF              shift and go to state 31
    WHILE           shift and go to state 35

    stmt_list                      shift and go to state 19
    stmt                           shift and go to state 20
    expr                           shift and go to state 21
    declaration                    shift and go to state 22
    assign                         shift and go to state 23
    print                          shift and go to state 24
    condition                      shift and go to state 25
    while                          shift and go to state 26

state 15

    (5) fn_def -> FN IDENTIFIER LEFT_PAREN param_list RIGHT_PAREN ARROW . expr
    (22) expr -> . expr PLUS expr
    (23) expr -> . expr MINUS expr
    (24) expr -> . expr STAR expr
    (25) expr -> . expr SLASH expr
    (26) expr -> . expr LESS expr
    (27) expr -> . expr LESS_EQUAL expr
    (28) expr -> . expr GREATER expr
    (29) expr -> . expr GREATER_EQUAL expr
    (30) expr -> . expr EQUAL_EQUAL expr
    (31) expr -> . expr BANG_EQUAL expr
    (32) expr -> . LEFT_PAREN expr RIGHT_PAREN
    (33) expr -> . NUMBER
    (34) expr -> . NIL
    (35) expr -> . STRING
    (36) expr -> . LEFT_BRACKET expr_list_comma RIGHT_BRACKET
    (37) expr -> . expr DOT IDENTIFIER
    (38) expr -> . expr DOT IDENTIFIER LEFT_PAREN expr_list_comma RIGHT_PAREN
    (39) expr -> . IDENTIFIER LEFT_PAREN expr_list_comma RIGHT_PAREN
    (43) expr -> . IDENTIFIER
    (44) expr -> . expr IF expr ELSE expr
    (45) expr -> . LEFT_BRACE stmt_list RIGHT_BRACE

    LEFT_PAREN      shift and go to state 17
    NUMBER          shift and go to state 27
    NIL             shift and go to state 28
    STRING          shift and go to state 29
    LEFT_BRACKET    shift and go to state 30
    IDENTIFIER      shift and go to state 36
    LEFT_BRACE      shift and go to state 18

    expr                           shift and go to state 37

state 16

    (39) expr -> IDENTIFIER . LEFT_PAREN expr_list_comma RIGHT_PAREN
    (43) expr -> IDENTIFIER .
    (48) assign -> IDENTIFIER . EQUAL expr SEMICOLON

  ! shift/reduce conflict for LEFT_PAREN resolved as shift
    LEFT_PAREN      shift and go to state 38
    PLUS            reduce using rule 43 (expr -> IDENTIFIER .)
    MINUS           reduce using rule 43 (expr -> IDENTIFIER .)
    STAR            reduce using rule 43 (expr -> IDENTIFIER .)
    SLASH           reduce using rule 43 (expr -> IDENTIFIER .)
    LESS            reduce using rule 43 (expr -> IDENTIFIER .)
    LESS_EQUAL      reduce using rule 43 (expr -> IDENTIFIER .)
    GREATER         reduce using rule 43 (expr -> IDENTIFIER .)
    GREATER_EQUAL   reduce using rule 43 (expr -> IDENTIFIER .)
    EQUAL_EQUAL     reduce using rule 43 (expr -> IDENTIFIER .)
    BANG_EQUAL      reduce using rule 43 (expr -> IDENTIFIER .)
    DOT             reduce using rule 43 (expr -> IDENTIFIER .)
    IF              reduce using rule 43 (expr -> IDENTIFIER .)
    NUMBER          reduce using rule 43 (expr -> IDENTIFIER .)
    NIL             reduce using rule 43 (expr -> IDENTIFIER .)
    STRING          reduce using rule 43 (expr -> IDENTIFIER .)
    LEFT_BRACKET    reduce using rule 43 (expr -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 43 (expr -> IDENTIFIER .)
    LEFT_BRACE      reduce using rule 43 (expr -> IDENTIFIER .)
    LET             reduce using rule 43 (expr -> IDENTIFIER .)
    PRINT           reduce using rule 43 (expr -> IDENTIFIER .)
    PRINTLN         reduce using rule 43 (expr -> IDENTIFIER .)
    WHILE           reduce using rule 43 (expr -> IDENTIFIER .)
    RIGHT_BRACE     reduce using rule 43 (expr -> IDENTIFIER .)
    EQUAL           shift and go to state 39

  ! LEFT_PAREN      [ reduce using rule 43 (expr -> IDENTIFIER .) ]


state 17

    (32) expr -> LEFT_PAREN . expr RIGHT_PAREN
    (22) expr -> . expr PLUS expr
    (23) expr -> . expr MINUS expr
    (24) expr -> . expr STAR expr
    (25) expr -> . expr SLASH expr
    (26) expr -> . expr LESS expr
    (27) expr -> . expr LESS_EQUAL expr
    (28) expr -> . expr GREATER expr
    (29) expr -> . expr GREATER_EQUAL expr
    (30) expr -> . expr EQUAL_EQUAL expr
    (31) expr -> . expr BANG_EQUAL expr
    (32) expr -> . LEFT_PAREN expr RIGHT_PAREN
    (33) expr -> . NUMBER
    (34) expr -> . NIL
    (35) expr -> . STRING
    (36) expr -> . LEFT_BRACKET expr_list_comma RIGHT_BRACKET
    (37) expr -> . expr DOT IDENTIFIER
    (38) expr -> . expr DOT IDENTIFIER LEFT_PAREN expr_list_comma RIGHT_PAREN
    (39) expr -> . IDENTIFIER LEFT_PAREN expr_list_comma RIGHT_PAREN
    (43) expr -> . IDENTIFIER
    (44) expr -> . expr IF expr ELSE expr
    (45) expr -> . LEFT_BRACE stmt_list RIGHT_BRACE

    LEFT_PAREN      shift and go to state 17
    NUMBER          shift and go to state 27
    NIL             shift and go to state 28
    STRING          shift and go to state 29
    LEFT_BRACKET    shift and go to state 30
    IDENTIFIER      shift and go to state 36
    LEFT_BRACE      shift and go to state 18

    expr                           shift and go to state 40

state 18

    (45) expr -> LEFT_BRACE . stmt_list RIGHT_BRACE
    (9) stmt_list -> . stmt stmt_list
    (10) stmt_list -> . stmt
    (11) stmt -> . expr
    (12) stmt -> . declaration
    (13) stmt -> . assign
    (14) stmt -> . print
    (15) stmt -> . condition
    (16) stmt -> . while
    (22) expr -> . expr PLUS expr
    (23) expr -> . expr MINUS expr
    (24) expr -> . expr STAR expr
    (25) expr -> . expr SLASH expr
    (26) expr -> . expr LESS expr
    (27) expr -> . expr LESS_EQUAL expr
    (28) expr -> . expr GREATER expr
    (29) expr -> . expr GREATER_EQUAL expr
    (30) expr -> . expr EQUAL_EQUAL expr
    (31) expr -> . expr BANG_EQUAL expr
    (32) expr -> . LEFT_PAREN expr RIGHT_PAREN
    (33) expr -> . NUMBER
    (34) expr -> . NIL
    (35) expr -> . STRING
    (36) expr -> . LEFT_BRACKET expr_list_comma RIGHT_BRACKET
    (37) expr -> . expr DOT IDENTIFIER
    (38) expr -> . expr DOT IDENTIFIER LEFT_PAREN expr_list_comma RIGHT_PAREN
    (39) expr -> . IDENTIFIER LEFT_PAREN expr_list_comma RIGHT_PAREN
    (43) expr -> . IDENTIFIER
    (44) expr -> . expr IF expr ELSE expr
    (45) expr -> . LEFT_BRACE stmt_list RIGHT_BRACE
    (46) declaration -> . LET IDENTIFIER EQUAL expr SEMICOLON
    (47) declaration -> . LET MUT IDENTIFIER EQUAL expr SEMICOLON
    (48) assign -> . IDENTIFIER EQUAL expr SEMICOLON
    (20) print -> . PRINT expr SEMICOLON
    (21) print -> . PRINTLN expr SEMICOLON
    (18) condition -> . IF expr LEFT_BRACE stmt_list RIGHT_BRACE
    (19) condition -> . IF expr LEFT_BRACE stmt_list RIGHT_BRACE ELSE LEFT_BRACE stmt_list RIGHT_BRACE
    (17) while -> . WHILE expr LEFT_BRACE stmt_list RIGHT_BRACE

    LEFT_PAREN      shift and go to state 17
    NUMBER          shift and go to state 27
    NIL             shift and go to state 28
    STRING          shift and go to state 29
    LEFT_BRACKET    shift and go to state 30
    IDENTIFIER      shift and go to state 16
    LEFT_BRACE      shift and go to state 18
    LET             shift and go to state 32
    PRINT           shift and go to state 33
    PRINTLN         shift and go to state 34
    IF              shift and go to state 31
    WHILE           shift and go to state 35

    stmt_list                      shift and go to state 41
    stmt                           shift and go to state 20
    expr                           shift and go to state 21
    declaration                    shift and go to state 22
    assign                         shift and go to state 23
    print                          shift and go to state 24
    condition                      shift and go to state 25
    while                          shift and go to state 26

state 19

    (4) fn_def -> FN IDENTIFIER LEFT_PAREN param_list RIGHT_PAREN LEFT_BRACE stmt_list . RIGHT_BRACE

    RIGHT_BRACE     shift and go to state 42


state 20

    (9) stmt_list -> stmt . stmt_list
    (10) stmt_list -> stmt .
    (9) stmt_list -> . stmt stmt_list
    (10) stmt_list -> . stmt
    (11) stmt -> . expr
    (12) stmt -> . declaration
    (13) stmt -> . assign
    (14) stmt -> . print
    (15) stmt -> . condition
    (16) stmt -> . while
    (22) expr -> . expr PLUS expr
    (23) expr -> . expr MINUS expr
    (24) expr -> . expr STAR expr
    (25) expr -> . expr SLASH expr
    (26) expr -> . expr LESS expr
    (27) expr -> . expr LESS_EQUAL expr
    (28) expr -> . expr GREATER expr
    (29) expr -> . expr GREATER_EQUAL expr
    (30) expr -> . expr EQUAL_EQUAL expr
    (31) expr -> . expr BANG_EQUAL expr
    (32) expr -> . LEFT_PAREN expr RIGHT_PAREN
    (33) expr -> . NUMBER
    (34) expr -> . NIL
    (35) expr -> . STRING
    (36) expr -> . LEFT_BRACKET expr_list_comma RIGHT_BRACKET
    (37) expr -> . expr DOT IDENTIFIER
    (38) expr -> . expr DOT IDENTIFIER LEFT_PAREN expr_list_comma RIGHT_PAREN
    (39) expr -> . IDENTIFIER LEFT_PAREN expr_list_comma RIGHT_PAREN
    (43) expr -> . IDENTIFIER
    (44) expr -> . expr IF expr ELSE expr
    (45) expr -> . LEFT_BRACE stmt_list RIGHT_BRACE
    (46) declaration -> . LET IDENTIFIER EQUAL expr SEMICOLON
    (47) declaration -> . LET MUT IDENTIFIER EQUAL expr SEMICOLON
    (48) assign -> . IDENTIFIER EQUAL expr SEMICOLON
    (20) print -> . PRINT expr SEMICOLON
    (21) print -> . PRINTLN expr SEMICOLON
    (18) condition -> . IF expr LEFT_BRACE stmt_list RIGHT_BRACE
    (19) condition -> . IF expr LEFT_BRACE stmt_list RIGHT_BRACE ELSE LEFT_BRACE stmt_list RIGHT_BRACE
    (17) while -> . WHILE expr LEFT_BRACE stmt_list RIGHT_BRACE

    RIGHT_BRACE     reduce using rule 10 (stmt_list -> stmt .)
    LEFT_PAREN      shift and go to state 17
    NUMBER          shift and go to state 27
    NIL             shift and go to state 28
    STRING          shift and go to state 29
    LEFT_BRACKET    shift and go to state 30
    IDENTIFIER      shift and go to state 16
    LEFT_BRACE      shift and go to state 18
    LET             shift and go to state 32
    PRINT           shift and go to state 33
    PRINTLN         shift and go to state 34
    IF              shift and go to state 31
    WHILE           shift and go to state 35

    stmt                           shift and go to state 20
    stmt_list                      shift and go to state 43
    expr                           shift and go to state 21
    declaration                    shift and go to state 22
    assign                         shift and go to state 23
    print                          shift and go to state 24
    condition                      shift and go to state 25
    while                          shift and go to state 26

state 21

    (11) stmt -> expr .
    (22) expr -> expr . PLUS expr
    (23) expr -> expr . MINUS expr
    (24) expr -> expr . STAR expr
    (25) expr -> expr . SLASH expr
    (26) expr -> expr . LESS expr
    (27) expr -> expr . LESS_EQUAL expr
    (28) expr -> expr . GREATER expr
    (29) expr -> expr . GREATER_EQUAL expr
    (30) expr -> expr . EQUAL_EQUAL expr
    (31) expr -> expr . BANG_EQUAL expr
    (37) expr -> expr . DOT IDENTIFIER
    (38) expr -> expr . DOT IDENTIFIER LEFT_PAREN expr_list_comma RIGHT_PAREN
    (44) expr -> expr . IF expr ELSE expr

  ! shift/reduce conflict for IF resolved as shift
    LEFT_PAREN      reduce using rule 11 (stmt -> expr .)
    NUMBER          reduce using rule 11 (stmt -> expr .)
    NIL             reduce using rule 11 (stmt -> expr .)
    STRING          reduce using rule 11 (stmt -> expr .)
    LEFT_BRACKET    reduce using rule 11 (stmt -> expr .)
    IDENTIFIER      reduce using rule 11 (stmt -> expr .)
    LEFT_BRACE      reduce using rule 11 (stmt -> expr .)
    LET             reduce using rule 11 (stmt -> expr .)
    PRINT           reduce using rule 11 (stmt -> expr .)
    PRINTLN         reduce using rule 11 (stmt -> expr .)
    WHILE           reduce using rule 11 (stmt -> expr .)
    RIGHT_BRACE     reduce using rule 11 (stmt -> expr .)
    PLUS            shift and go to state 44
    MINUS           shift and go to state 45
    STAR            shift and go to state 46
    SLASH           shift and go to state 47
    LESS            shift and go to state 48
    LESS_EQUAL      shift and go to state 49
    GREATER         shift and go to state 50
    GREATER_EQUAL   shift and go to state 51
    EQUAL_EQUAL     shift and go to state 52
    BANG_EQUAL      shift and go to state 53
    DOT             shift and go to state 54
    IF              shift and go to state 55

  ! IF              [ reduce using rule 11 (stmt -> expr .) ]


state 22

    (12) stmt -> declaration .
